--- a/package.json
+++ b/package.json
@@ -7,6 +7,12 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint",
+      "pre-push": "yarn lint"
+    }
+  },
   "dependencies": {
     "core-js": "^2.6.5",
     "register-service-worker": "^1.6.2",
@@ -19,6 +25,7 @@
     "@vue/cli-plugin-pwa": "^3.12.0",
     "@vue/cli-plugin-typescript": "^3.12.0",
     "@vue/cli-service": "^3.12.0",
+    "husky": "^3.0.8",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
     "typescript": "^3.4.3",
